# ChronoMap

./: .env.example  base.js  docker-compose.yml  index.html  pyproject.toml  run.prod.sh  wsgi.py
app/: .flaskenv  Dockerfile  run.prod.sh
app/src/chronomap/: __init__.py  config.py  database.py  frame.py  routes.py
nginx/: nginx.conf
nginx/static/: base.js  index.html  styles.css
src/chronomap/: __init__.py  config.py  database.py  frame.py  routes.py
