[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/chronomap/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chronomap"]

[project]
dynamic = ["version"]
name = "ChronoMap"
dependencies = [
  "Flask==3.1.1",
]
requires-python = ">= 3.11"
authors = [
  {name = "Retrontology", email = "retrontology@hotmail.com"},
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]